# Beads-UI

./: .gitignore  Cargo.toml  INSTALL.md  README.md  TEST_RESULTS.md  test_final_verification.sh
src/: main.rs
src/beads/: db.rs  mod.rs  models.rs
src/ui/: app.rs  board.rs  detail.rs  mod.rs  search.rs  theme.rs
src/watcher/: mod.rs
