[package]
name = "brui"
version = "0.1.0"
edition = "2021"
authors = ["Moses"]
description = "Real-time Beads Kanban Board TUI"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = { version = "0.29", features = ["palette", "unstable-rendered-line-info"] }
ratatui-core = "0.1"
crossterm = "0.28"
tui-markdown = "0.3"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Date/time
chrono = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Fuzzy search
fuzzy-matcher = "0.3"
